--- a/Adapter Pattern Practice/Adapter Pattern Practice.csproj
+++ b/Adapter Pattern Practice/Adapter Pattern Practice.csproj
@@ -46,8 +46,8 @@
     <Compile Include="BearAdapter.cs" />
     <Compile Include="TeddyBear.cs" />
     <Compile Include="Grizzly.cs" />
-    <Compile Include="ToyBear.cs" />
-    <Compile Include="Bear.cs" />
+    <Compile Include="IToyBear.cs" />
+    <Compile Include="IBear.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
